# imips_open

./: .gitignore  CMakeLists.txt  README.md  compress.py  final_config.txt  infer_folder.py  package.xml  plot_analysis.py  plot_match_distrib.py  plot_net_out.py  plot_r_t.py  plot_r_t_distrib.py  plot_size_v_perf.py  plot_val_metrics.py  render_matching.py  render_set.py  setup.py  timing.py  train.py
python/imips/: augment.py  baselines.py  cache.py  compress.py  datasets.py  evaluate.py  flags.py  hpatch_confmat.py  hpatches.py  hyperparams.py  interest_points.py  klt.py  losses.py  multiscale.py  nets.py  p3p.py  patch_batch.py  plot_utils.py  points.py  sequences.py  sips_multiscale.py  sips_system.py  stereo.py  system.py
