<?xml version="1.0"?>
<package format="2">
  <name>imips</name>
  <version>0.0.0</version>
  <description>
    Implicitly Matched Interest Points
  </description>

  <author>Titus Cieslewski</author>
  <maintainer email="titus@ifi.uzh.ch">Titus Cieslewski</maintainer>
  <license>Private</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>rpg_common_py</depend>
  <depend>rpg_datasets_py</depend>
  
</package>
